--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+ 
+button { 
+  height: 25px; 
+  width: 250px; 
+  border: 1px solid rgba(0, 0, 0, 0.2); 
+} 
+button { 
+  margin-top: 10px; 
+  cursor: pointer; 
+  font-size: 15px; 
+  background: #01d28e; 
+  border: 1px solid #01d28e; 
+  color: #fff; 
+  padding: 10px 20px; 
+} 
+button:hover { 
+  background: #6ca3f0; 
+} 
+button{ 
+  display: flex; 
+  justify-content: center; 
+}  
+button { 
+  display: flex; 
+  flex-direction: column; 
+  gap: 8px; 
+  margin: 10px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
+.center {
+  margin-left: 40%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span {
+  color :rgb(240, 5, 5);
 }
